[package]
name = "json_bench"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
time = "0.3"

[[bin]]
name = "gen"
path = "src/gen.rs"

[[bin]]
name = "parse"
path = "src/main.rs"

# The opt-level size numbers for the various release profile setting
# rustc 1.91.0 (f8297e351 2025-10-28)
# There was no difference between edition = "2024"| "2021"
[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = "s" # 388,480
#opt-level = "z" # 389,776
#opt-level = 3 # 420,872

# Below was with edition = "2021"
#strip = true
#lto = false
#codegen-units = 1
#panic = "abort"
##opt-level = "s" # 454152
#opt-level = "z" # 453144
##opt-level = 3 # 463064

#strip = true
#lto = true
##codegen-units = 1
#panic = "abort"
#opt-level = "s" # 388768
##opt-level = "z" # 389968
##opt-level = 3 # 421920

#strip = true
#lto = true
#codegen-units = 1
##panic = "abort"
#opt-level = "s" # 392760
##opt-level = "z" # 393656
##opt-level = 3 # 425904
